<?xml version="1.0"?>
<package format="2">
  <name>iai_tiago_description</name>
  <version>0.0.0</version>
  <description>The iai_tiago_description package</description>

  <maintainer email="jeroen.schaefer@outlook.de">Jeroen Schäfer</maintainer>


  <license>LGPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>tiago_dual_description</exec_depend>

  <export>
  </export>
</package>
